--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="./styles/game.css">
         <script type="text/javascript" src="./scripts/game.js"></script>
+        <script type="text/javascript" src="./scripts/phaser.min.js"></script>
         <title>Flappy dragonfly</title>
     </head>
 
