--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/game.css" />
+    <title>Flappy dragonfly</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./styles/game.css">
-        <script type="text/javascript" src="./scripts/phaser.min.js"></script>
-        <script type="text/javascript" src="./scripts/game.js"></script>
-        <title>Flappy dragonfly</title>
-    </head>
-
-    <body>
-    </body>
+  <body>
+    <script type="text/javascript" src="./scripts/phaser.min.js"></script>
+    <script type="text/javascript" src="./scripts/game.js"></script>
+  </body>
 </html>
