Connected scenes with basic functionality

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <script type="text/javascript" src="./scripts/phaser.min.js"></script>
         <script type="text/javascript" src="./scripts/intro.js"></script>
         <script type="text/javascript" src="./scripts/level1.js"></script>
+        <script type="text/javascript" src="./scripts/rating.js"></script>
         <script type="text/javascript" src="./scripts/game.js"></script>
         <title>Flappy dragonfly</title>
     </head>
-
     <body>
     </body>
 </html>
